src/objects/ensxapp__SAP_Delivery_Search_Preset_Sort_Field__mdt.object
<CustomObject>
    <description>Sort field definition for Delivery Search presets</description>
    <fields>
        <fullName>ensxapp__Precedence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The precedence of this sort field.</description>
        <inlineHelpText>Lower numbers indicate higher precedence</inlineHelpText>
        <label>Precedence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Delivery_Search_Preset__c</fullName>
        <description>The search preset to which this sort definition belongs.</description>
        <label>SAP Delivery Search Preset</label>
        <referenceTo>ensxapp__SAP_Delivery_Search_Preset__mdt</referenceTo>
        <relationshipLabel>SAP Delivery Search Preset Sort Field</relationshipLabel>
        <relationshipName>SAP_Delivery_Search_Preset_Sort_Field</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Sort_Direction__c</fullName>
        <description>Sorting direction of this field</description>
        <label>Sort Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                    <default>true</default>
                    <label>Descending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__Sort_Field__c</fullName>
        <description>Field to sort results by</description>
        <label>Sort Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERDAT</fullName>
                    <default>true</default>
                    <label>Create Date</label>
                </value>
                <value>
                    <fullName>LFDAT</fullName>
                    <label>Delivery Date</label>
                </value>
                <value>
                    <fullName>WADAT</fullName>
                    <label>PGI Date</label>
                </value>
                <value>
                    <fullName>KUNAG</fullName>
                    <label>Sold To Party</label>
                </value>
                <value>
                    <fullName>KUNWE</fullName>
                    <label>Ship To Party</label>
                </value>
                <value>
                    <fullName>VBELN</fullName>
                    <label>Delivery</label>
                </value>
                <value>
                    <fullName>LFART</fullName>
                    <label>Delivery Type</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SAP Delivery Search Preset Sort Field</label>
    <pluralLabel>SAP Delivery Search Preset Sort Field</pluralLabel>
</CustomObject>